--- a/data/Mucic_and_Saccharic_Acid/config.ini
+++ b/data/Mucic_and_Saccharic_Acid/config.ini
@@ -1,5 +1,5 @@
 [main]
-base.dir       = /home/jiangx6/data/10.GutFun/01.GutFunFind/GutFunFind/data/Mucic_and_Saccharic_Acid
+base.dir       = /Users/xiaofang/Workspaces/01.GutFunFind/data/Mucic_and_Saccharic_Acid/
 detect.tool    = blast
 detect.config  = %(base.dir)s/detect.ini
 cluster.tool   = DBSCAN
