support gene based filter

--- a/data/Mucic_and_Saccharic_Acid/filter.ini
+++ b/data/Mucic_and_Saccharic_Acid/filter.ini
@@ -1,5 +1,6 @@
 [filter.global]
 evalue = 1e-6
-bitscore = 
+ident_pct = 30
 
 [filter.local]
+filter_file = /home/xiaofang/GutFunFind/data/Mucic_and_Saccharic_Acid/hit_filter.tab
