--- a/data/Mucic_and_Saccharic_Acid/detect.ini
+++ b/data/Mucic_and_Saccharic_Acid/detect.ini
@@ -1,5 +1,5 @@
 [blast]
-base.dir       = /Users/xiaofang/Workspaces/01.GutFunFind/data/Mucic_and_Saccharic_Acid/
+base.dir       = /home/xiaofang/GutFunFind/data/Mucic_and_Saccharic_Acid/
 blast.query    = %(base.dir)s/bait.fa
 blast.exec     = blastp
 blast.evalue   = 1e-4
