Use relative path instead of absolute path

--- a/data/Flagellar/config.ini
+++ b/data/Flagellar/config.ini
@@ -1,7 +1,6 @@
 [main]
-base.dir       = /home/xiaofang/GutFunFind/data/Flagellar/
 detect.tool    = interproscan
-detect.config  = %(base.dir)s/detect.ini
+detect.config  = detect.ini
 cluster.tool   = DBSCAN
-cluster.config = %(base.dir)s/cluster.ini
-system.file    = %(base.dir)s/system.json
+cluster.config = cluster.ini
+system.file    = system.json
