--- a/data/Flagellar/detect.ini
+++ b/data/Flagellar/detect.ini
@@ -1,3 +1,2 @@
 [interproscan]
-base.dir       = /home/xiaofang/GutFunFind/data/Flagellar/
-orthoID_domain_precision = %(base.dir)s/domain_precision.txt
+orthoID_domain_precision = domain_precision.txt
