--- a/data/Mucic_and_Saccharic_Acid/detect.ini
+++ b/data/Mucic_and_Saccharic_Acid/detect.ini
@@ -1,8 +1,7 @@
 [blast]
-base.dir       = /home/xiaofang/GutFunFind/data/Mucic_and_Saccharic_Acid/
-blast.query    = %(base.dir)s/bait.fa
+blast.query    = bait.fa
 blast.exec     = blastp
 blast.evalue   = 1e-4
 blast.threads  = 8
-filter.config  = %(base.dir)s/filter.ini
-map.ortho_pair = %(base.dir)s/ortho_query_pair.tsv
+filter.config  = filter.ini
+map.ortho_pair = ortho_query_pair.tsv
