--- a/data/Mucic_and_Saccharic_Acid/filter.ini
+++ b/data/Mucic_and_Saccharic_Acid/filter.ini
@@ -3,4 +3,4 @@ evalue = 1e-6
 ident_pct = 30
 
 [filter.local]
-filter_file = /home/xiaofang/GutFunFind/data/Mucic_and_Saccharic_Acid/hit_filter.tab
+filter_file = hit_filter.tab
