--- a/data/Mucic_and_Saccharic_Acid/config.ini
+++ b/data/Mucic_and_Saccharic_Acid/config.ini
@@ -1,7 +1,6 @@
 [main]
-base.dir       = /home/xiaofang/GutFunFind/data/Mucic_and_Saccharic_Acid/
 detect.tool    = blast
-detect.config  = %(base.dir)s/detect.ini
+detect.config  = detect.ini
 cluster.tool   = DBSCAN
-cluster.config = %(base.dir)s/cluster.ini
-system.file    = %(base.dir)s/system.json
+cluster.config = cluster.ini
+system.file    = system.json
