modify Flagella function

--- a/data/Flagellar/config.ini
+++ b/data/Flagellar/config.ini
@@ -1,5 +1,5 @@
 [main]
-detect.tool    = interproscan
+detect.tool    = kofamscan
 detect.config  = detect.ini
 cluster.tool   = DBSCAN
 cluster.config = cluster.ini
