--- a/data/Flagellar/detect.ini
+++ b/data/Flagellar/detect.ini
@@ -1,2 +1,4 @@
-[interproscan]
-orthoID_domain_precision = domain_precision.txt
+[kofamscan]
+map.ortho_pair = domain_precision.txt
+filter.config = filter.ini
+
