Updated all search functions to use combined config file

--- a/data/Cysteine_Degradation/config.ini
+++ b/data/Cysteine_Degradation/config.ini
@@ -1,6 +1,22 @@
 [main]
 detect.tool    = blast
-detect.config  = detect.ini
 cluster.tool   = DBSCAN
-cluster.config = cluster.ini
 system.file    = system.json
+
+[blast]
+blast.query    = bait.fa
+blast.exec     = blastp
+blast.evalue   = 1e-6
+blast.threads  = 8
+map.ortho_pair = ortho_query_pair.tsv
+
+[filter]
+filter_file = hit_filter.tab
+evalue = 1e-6
+ident_pct = 50
+
+[DBSCAN]
+# Parameter pass to sklearn.cluster.DBSCAN
+cluster.eps	=	4
+# Parameter pass to sklearn.cluster.DBSCAN; The number of function-related-genes (or total weight) in a neighborhood for a point to be considered as a core point.
+cluster.min_samples	=	1
