--- a/data/Flagellar/config.ini
+++ b/data/Flagellar/config.ini
@@ -1,6 +1,17 @@
 [main]
 detect.tool    = kofamscan
-detect.config  = detect.ini
 cluster.tool   = DBSCAN
-cluster.config = cluster.ini
 system.file    = system.json
+
+[kofamscan]
+map.ortho_pair = domain_precision.txt
+
+[filter]
+evalue = 1e-3
+threshold = 1
+
+[DBSCAN]
+# Parameter pass to sklearn.cluster.DBSCAN
+cluster.eps         = 4
+# Parameter pass to sklearn.cluster.DBSCAN; The number of function-related-genes (or total weight) in a neighborhood for a point to be considered as a core point.
+cluster.min_samples = 1.8
