--- a/data/HDC/config.ini
+++ b/data/HDC/config.ini
@@ -1,6 +1,19 @@
 [main]
 detect.tool    = hmmer
-detect.config  = detect.ini
 cluster.tool   = DBSCAN
-cluster.config = cluster.ini
 system.file    = system.json
+
+[hmmer]
+hmmer.query    = Hdc.hmm
+hmmer.exec     = hmmscan
+hmmer.threads  = 8
+orthoID_domain_precision = domain_precision.txt
+
+[filter]
+evalue = 1e-6
+
+[DBSCAN]
+# Parameter pass to sklearn.cluster.DBSCAN
+cluster.eps         = 4
+# Parameter pass to sklearn.cluster.DBSCAN; The number of function-related-genes (or total weight) in a neighborhood for a point to be considered as a core point.
+cluster.min_samples = 1.8
